MDEV-10307 CAST(11068046444225730969 AS SIGNED) does not return a warning