sql/sql_type.cc
@@ -3380,7 +3380,7 @@ longlong Type_handler_real_result::
 longlong Type_handler_int_result::
            Item_val_int_signed_typecast(Item *item) const
 {
-  return item->val_int();
+  return item->val_int_signed_typecast_from_int();
 }
 
 longlong Type_handler_decimal_result::
